--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>qianjinwebapp-demo-01</module>
         <module>qianjinwebapp-demo-02</module>
+        <module>qianjinwebapp-boot-demo-01</module>
     </modules>
 
 
