add 4maven demo 01.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>qianjinwebapp-demo-01</module>
         <module>qianjinwebapp-demo-02</module>
         <module>qianjinwebapp-boot-demo-01</module>
+        <module>qianjinwebapp-4maven-demo-01</module>
     </modules>
 
 
