--- a/qianjinwebapp-4maven-demo-01/pom.xml
+++ b/qianjinwebapp-4maven-demo-01/pom.xml
@@ -1,70 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>qianjinwebapp-demo</artifactId>
-        <groupId>org.example</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>qianjinwebapp-4maven-demo-01</artifactId>
-    <packaging>war</packaging>
-
-    <name>qianjinwebapp-4maven-demo-01 Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <finalName>qianjinwebapp-4maven-demo-01</finalName>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-            <plugins>
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>3.2.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
+  <parent> 
+    <artifactId>qianjinwebapp-demo</artifactId>  
+    <groupId>org.example</groupId>  
+    <version>1.0-SNAPSHOT</version> 
+  </parent>  
+  <modelVersion>4.0.0</modelVersion>  
+  <artifactId>qianjinwebapp-4maven-demo-01</artifactId>  
+  <packaging>war</packaging>  
+  <name>qianjinwebapp-4maven-demo-01 Maven Webapp</name>  
+  <!-- FIXME change it to the project's website -->  
+  <url>http://www.example.com</url>  
+  <properties> 
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+    <maven.compiler.source>1.7</maven.compiler.source>  
+    <maven.compiler.target>1.7</maven.compiler.target> 
+  </properties>  
+  <dependencies> 
+    <dependency> 
+      <groupId>junit</groupId>  
+      <artifactId>junit</artifactId>  
+      <version>4.11</version>  
+      <scope>test</scope> 
+    </dependency> 
+  </dependencies>  
+  <build> 
+    <finalName>qianjinwebapp-4maven-demo-01</finalName>  
+    <pluginManagement> 
+      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->  
+      <plugins> 
+        <plugin> 
+          <artifactId>maven-clean-plugin</artifactId>  
+          <version>3.1.0</version> 
+        </plugin>  
+        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->  
+        <plugin> 
+          <artifactId>maven-resources-plugin</artifactId>  
+          <version>3.0.2</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-compiler-plugin</artifactId>  
+          <version>3.8.0</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-surefire-plugin</artifactId>  
+          <version>2.22.1</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-war-plugin</artifactId>  
+          <version>3.2.2</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-install-plugin</artifactId>  
+          <version>2.5.2</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-deploy-plugin</artifactId>  
+          <version>2.8.2</version> 
+        </plugin> 
+      </plugins> 
+    </pluginManagement>  
+    <plugins>
+      <plugin>
+        <groupId>com.microsoft.azure</groupId>
+        <artifactId>azure-webapp-maven-plugin</artifactId>
+        <version>1.12.0</version>
+        <configuration>
+          <schemaVersion>v2</schemaVersion>
+          <subscriptionId>685ba005-af8d-4b04-8f16-a7bf38b2eb5a</subscriptionId>
+          <resourceGroup>qianjinshen</resourceGroup>
+          <appName>qianjinshen-ww-01</appName>
+          <pricingTier>P1v2</pricingTier>
+          <region>centralus</region>
+          <appServicePlanName>cln2496a0e3-293b-4d26-85f0-f93868634dc2</appServicePlanName>
+          <appServicePlanResourceGroup>cleanupservice</appServicePlanResourceGroup>
+          <runtime>
+            <os>Windows</os>
+            <javaVersion>Java 8</javaVersion>
+            <webContainer>Tomcat 9.0</webContainer>
+          </runtime>
+          <deployment>
+            <resources>
+              <resource>
+                <directory>${project.basedir}/target</directory>
+                <includes>
+                  <include>*.war</include>
+                </includes>
+              </resource>
+              <resource>
+                <type>lib</type>
+                <directory>${project.basedir}/src/main/resources/deployment/lib</directory>
+                <includes>
+                  <include>*.jar</include>
+                </includes>
+              </resource>
+              <resource>
+                <type>static</type>
+                <directory>${project.basedir}/src/main/resources/deployment/static</directory>
+                <includes>
+                  <include>*.html</include>
+                </includes>
+              </resource>
+              <resource>
+                <type>startup</type>
+                <directory>${project.basedir}/src/main/resources/deployment/startup</directory>
+                <includes>
+                  <include>*.bat</include>
+                </includes>
+              </resource>
+              <resource>
+                <type>zip</type>
+                <directory>${project.basedir}/src/main/resources/deployment/zip</directory>
+                <includes>
+                  <include>*.zip</include>
+                </includes>
+              </resource>
+            </resources>
+          </deployment>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build> 
 </project>
