--- a/qianjinwebapp-4maven-demo-01/pom.xml
+++ b/qianjinwebapp-4maven-demo-01/pom.xml
@@ -61,65 +61,73 @@
         </plugin> 
       </plugins> 
     </pluginManagement>  
-    <plugins>
-      <plugin>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>azure-webapp-maven-plugin</artifactId>
-        <!-- <version>1.11.0</version> -->
-        <configuration>
-          <schemaVersion>V2</schemaVersion>
-          <subscriptionId>685ba005-af8d-4b04-8f16-a7bf38b2eb5a</subscriptionId>
-          <resourceGroup>qianjinshen</resourceGroup>
-          <appName>qianjinshen-ww-03</appName>
-          <pricingTier>S1</pricingTier>
-          <region>centralus</region>
-          <appServicePlanName>plappservice02</appServicePlanName>
-          <appServicePlanResourceGroup>plwin</appServicePlanResourceGroup>
-          <runtime>
-            <os>windows</os>
-            <javaVersion>1.8</javaVersion>
-            <webContainer>tomcat 8.5</webContainer>
-          </runtime>
-          <deployment>
-            <resources>
-              <resource>
-                <directory>${project.basedir}/target</directory>
-                <includes>
-                  <include>*.war</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>lib</type>
-                <directory>${project.basedir}/src/main/resources/deployment/lib</directory>
-                <includes>
+    <plugins> 
+      <plugin> 
+        <groupId>com.microsoft.azure</groupId>  
+        <artifactId>azure-webapp-maven-plugin</artifactId>  
+        <!-- <version>1.11.0</version> -->  
+        <configuration> 
+          <schemaVersion>V2</schemaVersion>  
+          <subscriptionId>685ba005-af8d-4b04-8f16-a7bf38b2eb5a</subscriptionId>  
+          <resourceGroup>qianjinshen</resourceGroup>  
+          <appName>qianjinshen-ww-01</appName>  
+          <pricingTier>S1</pricingTier>  
+          <region>centralus</region>  
+          <appServicePlanName>plappservice02</appServicePlanName>  
+          <appServicePlanResourceGroup>plwin</appServicePlanResourceGroup>  
+          <runtime> 
+            <os>windows</os>  
+            <javaVersion>Java 8</javaVersion>  
+            <webContainer>Tomcat 8.5</webContainer> 
+          </runtime>  
+          <deployment> 
+            <resources> 
+              <resource> 
+                <directory>${project.basedir}/target</directory>  
+                <includes> 
                   <include>*.jar</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>static</type>
-                <directory>${project.basedir}/src/main/resources/deployment/static</directory>
-                <includes>
-                  <include>*.html</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>startup</type>
-                <directory>${project.basedir}/src/main/resources/deployment/startup</directory>
-                <includes>
-                  <include>*.bat</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>zip</type>
-                <directory>${project.basedir}/src/main/resources/deployment/zip</directory>
-                <includes>
-                  <include>*.zip</include>
-                </includes>
-              </resource>
-            </resources>
-          </deployment>
-        </configuration>
-      </plugin>
-    </plugins>
+                </includes> 
+              </resource>  
+              <resource> 
+                <type>war</type>  
+                <targetDirectory>helloworld</targetDirectory>  
+                <directory>${project.basedir}/target</directory>  
+                <includes> 
+                  <include>*.war</include> 
+                </includes> 
+              </resource>  
+              <resource> 
+                <type>lib</type>  
+                <directory>${project.basedir}/src/main/resources/deployment/lib</directory>  
+                <includes> 
+                  <include>*.jar</include> 
+                </includes> 
+              </resource>  
+              <resource> 
+                <type>static</type>  
+                <directory>${project.basedir}/src/main/resources/deployment/static</directory>  
+                <includes> 
+                  <include>*.html</include> 
+                </includes> 
+              </resource>  
+              <resource> 
+                <type>startup</type>  
+                <directory>${project.basedir}/src/main/resources/deployment/startup</directory>  
+                <includes> 
+                  <include>startup.bat</include> 
+                </includes> 
+              </resource>  
+              <resource> 
+                <type>zip</type>  
+                <directory>${project.basedir}/src/main/resources/deployment/zip</directory>  
+                <includes> 
+                  <include>*.zip</include> 
+                </includes> 
+              </resource> 
+            </resources> 
+          </deployment> 
+        </configuration> 
+      </plugin> 
+    </plugins> 
   </build> 
 </project>
