--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>qianjinwebapp-demo-02</module>
         <module>qianjinwebapp-boot-demo-01</module>
         <module>qianjinwebapp-4maven-demo-01</module>
+        <module>qianjinweb-demo-01 space</module>
     </modules>
 
 
