--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
         <module>qianjinwebapp-demo-02</module>
         <module>qianjinwebapp-boot-demo-01</module>
         <module>qianjinwebapp-4maven-demo-01</module>
-        <module>qianjinweb-demo-01 space</module>
+        <module>qianjinwebapp-demo-01 space</module>
+        <!--<module>qianjinwebapp-ear-demo-01</module>-->
+        <module>qianjinwebapp-ear-demo-war</module>
     </modules>
 
 
