--- a/qianjinwebapp-ear-demo-war/pom.xml
+++ b/qianjinwebapp-ear-demo-war/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>qianjinweb-demo-01-space</artifactId>
+    <artifactId>qianjinwebapp-ear-demo-war</artifactId>
     <packaging>war</packaging>
 
-    <name>qianjinweb-demo-01 space Maven Webapp</name>
+    <name>qianjinweb-ear-demo-war Maven Webapp</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -32,7 +32,7 @@
     </dependencies>
 
     <build>
-        <finalName>qianjinweb-demo-01 space</finalName>
+        <finalName>qianjinweb-ear-demo-war</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
