--- a/demo-01 space/pom.xml
+++ b/demo-01 space/pom.xml
@@ -3,16 +3,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>qianjinwebapp-demo</artifactId>
+        <artifactId>qianjin-demo</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>qianjinwebapp-demo-01-space</artifactId>
+    <artifactId>qianjin-demo-01-space</artifactId>
     <packaging>war</packaging>
 
-    <name>qianjinwebapp-demo-01 space Maven Webapp</name>
+    <name>qianjin-demo-01 space</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
