--- a/demo-02/pom.xml
+++ b/demo-02/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>qianjinwebapp-demo-02</artifactId>
+  <artifactId>qianjin-demo-02</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>qianjinwebapp-demo-02 Maven Webapp</name>
+  <name>qianjin-demo-02</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
