--- a/demo-4maven-01/pom.xml
+++ b/demo-4maven-01/pom.xml
@@ -2,14 +2,14 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
   <parent> 
-    <artifactId>qianjinwebapp-demo</artifactId>  
+    <artifactId>qianjin-demo</artifactId>
     <groupId>org.example</groupId>  
     <version>1.0-SNAPSHOT</version> 
   </parent>  
   <modelVersion>4.0.0</modelVersion>  
-  <artifactId>qianjinwebapp-4maven-demo-01</artifactId>  
+  <artifactId>qianjin-4maven-demo-01</artifactId>
   <packaging>war</packaging>  
-  <name>qianjinwebapp-4maven-demo-01 Maven Webapp</name>  
+  <name>qianjin-4maven-demo-01</name>
   <!-- FIXME change it to the project's website -->  
   <url>http://www.example.com</url>  
   <properties> 
