--- a/demo-ear-01/pom.xml
+++ b/demo-ear-01/pom.xml
@@ -21,7 +21,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>qianjinwebapp-demo</artifactId>
+        <artifactId>qianjin-demo</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -29,8 +29,8 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>ear</packaging>
 
-    <name>qianjinwebapp-ear-demo-01</name>
-    <artifactId>qianjinwebapp-ear-demo-01</artifactId>
+    <name>qianjin-ear-demo-01</name>
+    <artifactId>qianjin-ear-demo-01</artifactId>
 
     <dependencies>
         <dependency>
