--- a/demo-4maven-01/pom.xml
+++ b/demo-4maven-01/pom.xml
@@ -7,9 +7,9 @@
     <version>1.0-SNAPSHOT</version> 
   </parent>  
   <modelVersion>4.0.0</modelVersion>  
-  <artifactId>qianjin-4maven-demo-01</artifactId>
+  <artifactId>demo-4maven-01</artifactId>
   <packaging>war</packaging>  
-  <name>qianjin-4maven-demo-01</name>
+  <name>demo-4maven-01</name>
   <!-- FIXME change it to the project's website -->  
   <url>http://www.example.com</url>  
   <properties> 
@@ -26,7 +26,7 @@
     </dependency> 
   </dependencies>  
   <build> 
-    <finalName>qianjinwebapp-4maven-demo-01</finalName>  
+    <finalName>demo-4maven-01</finalName>
     <pluginManagement> 
       <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->  
       <plugins> 
