--- a/demo-ear-01/pom.xml
+++ b/demo-ear-01/pom.xml
@@ -29,13 +29,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>ear</packaging>
 
-    <name>ear-demo-01</name>
-    <artifactId>ear-demo-01</artifactId>
+    <name>demo-ear-01</name>
+    <artifactId>demo-ear-01</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>ear-demo-war</artifactId>
+            <artifactId>demo-ear-war</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
@@ -53,12 +53,12 @@
                     <modules>
                         <webModule>
                             <groupId>org.example</groupId>
-                            <artifactId>ear-demo-war</artifactId>
+                            <artifactId>demo-ear-war</artifactId>
                             <contextRoot>/helloear</contextRoot>
                         </webModule>
                         <webModule>
                             <groupId>org.example</groupId>
-                            <artifactId>ear-demo-war</artifactId>
+                            <artifactId>demo-ear-war</artifactId>
                             <contextRoot>/</contextRoot>
                         </webModule>
                     </modules>
