--- a/demo-02/pom.xml
+++ b/demo-02/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>qianjin-demo</artifactId>
+    <artifactId>qianjin-demo2</artifactId>
     <groupId>org.example</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -12,7 +12,7 @@
   <artifactId>demo-02</artifactId>
   <packaging>war</packaging>
 
-  <name>demo-02</name>
+  <name>demo-02 Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
