--- a/demo-ear-01/pom.xml
+++ b/demo-ear-01/pom.xml
@@ -1,41 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements.  See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership.  The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License.  You may obtain a copy of the License at
 
-   http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied.  See the License for the
-  specific language governing permissions and limitations
-  under the License.
--->
-<!-- $Id: pom.xml 642118 2008-03-28 08:04:16Z reinhard $ -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>qianjin-demo</artifactId>
+        <artifactId>qianjin-demo2</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <packaging>ear</packaging>
 
-    <name>demo-ear-01</name>
     <artifactId>demo-ear-01</artifactId>
+    <packaging>war</packaging>
+
+    <name>demo-ear-01 Maven Webapp</name>
+    <!-- FIXME change it to the project's website -->
+    <url>http://www.example.com</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
+
+
 
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>demo-ear-war</artifactId>
+            <artifactId>demo-ear-01-war</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
@@ -53,11 +45,11 @@
                     <modules>
                         <webModule>
                             <groupId>org.example</groupId>
-                            <artifactId>demo-ear-war</artifactId>
+                            <artifactId>demo-ear-01-war</artifactId>
                             <contextRoot>/helloear</contextRoot>
                         </webModule>
                         <webModule>
-                            <groupId>org.example</groupId>
+                            <groupId>demo-ear-01-war</groupId>
                             <artifactId>demo-ear-war</artifactId>
                             <contextRoot>/</contextRoot>
                         </webModule>
