--- a/demo-01/Dockerfile
+++ b/demo-01/Dockerfile
@@ -1,3 +1,3 @@
-FROM tomcat:8.5-jre8
+FROM mcr.microsoft.com/java/tomcat:8-zulu-alpine-tomcat-9
 RUN rm -fr /usr/local/tomcat/webapps/ROOT
 COPY target/demo-01.war /usr/local/tomcat/webapps/ROOT.war
