--- a/boot-demo/pom.xml
+++ b/boot-demo/pom.xml
@@ -2,17 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>qianjin-demo2</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>qianjin-demo2</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>boot-demo</artifactId>
     <modules>
-        <module>function-demo</module>
-        <module>webapp-demo</module>
-        <module>boot-demo</module>
+        <module>demo-boot-01</module>
+        <module>demo-boot-02-mysql</module>
     </modules>
+
     <packaging>pom</packaging>
-
-
 </project>
