--- a/boot-demo/demo-boot-01/pom.xml
+++ b/boot-demo/demo-boot-01/pom.xml
@@ -49,7 +49,42 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--<plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-spring-cloud-maven-plugin</artifactId>
+                <version>1.7.0-SNAPSHOT</version>
+                <configuration>
+                    <subscriptionId>685ba005-af8d-4b04-8f16-a7bf38b2eb5a</subscriptionId>
+                    <clusterName>qianjin-cloud-mvn-01</clusterName>
+                    <appName>demo-boot-01</appName>
+                    <isPublic>true</isPublic>
+                    <deployment>
+                        <cpu>1</cpu>
+                        <memoryInGB>1</memoryInGB>
+                        <instanceCount>1</instanceCount>
+                        <runtimeVersion>Java 8</runtimeVersion>
+                        <resources>
+                            <resource>
+                                <filtering/>
+                                <mergeId/>
+                                <targetPath/>
+                                <directory>${project.basedir}/target</directory>
+                                <includes>
+                                    <include>*.jar</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </deployment>
+                </configuration>
+            </plugin>-->
         </plugins>
     </build>
+    <!--<pluginRepositories>
+        <pluginRepository>
+            <id>commicrosoftazure-4697</id>
+            <name>commicrosoftazure-4697</name>
+            <url>https://oss.sonatype.org/content/repositories/commicrosoftazure-4697/</url>
+        </pluginRepository>
+    </pluginRepositories>-->
 
 </project>
