--- a/boot-demo/demo-boot-01/src/main/resources/application.properties
+++ b/boot-demo/demo-boot-01/src/main/resources/application.properties
@@ -6,6 +6,4 @@
 #spring.database.username=${AZURE_MYSQL_USERNAME}
 #spring.database.password=${AZURE_MYSQL_PASSWORD}
 #spring.datasource.
-spring.datasource.url=${AZURE_MYSQL_URL}
-spring.datasource.username=${AZURE_MYSQL_USERNAME}
-spring.datasource.password=${AZURE_MYSQL_PASSWORD}
+spring.datasource
