--- a/boot-demo/pom.xml
+++ b/boot-demo/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>demo-boot-01</module>
         <module>demo-boot-02-mysql</module>
+        <module>demo-boot-03-sql</module>
     </modules>
 
     <packaging>pom</packaging>
