--- a/webapp-demo/demo-4maven-01/pom.xml
+++ b/webapp-demo/demo-4maven-01/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
-  <parent>
-    <artifactId>webapp-demo</artifactId>
+  <parent> 
+    <artifactId>webapp-demo</artifactId>  
     <groupId>org.example</groupId>  
     <version>1.0-SNAPSHOT</version> 
   </parent>  
   <modelVersion>4.0.0</modelVersion>  
-  <artifactId>demo-4maven-01</artifactId>
+  <artifactId>demo-4maven-01</artifactId>  
   <packaging>war</packaging>  
-  <name>demo-4maven-01</name>
+  <name>demo-4maven-01</name>  
   <!-- FIXME change it to the project's website -->  
   <url>http://www.example.com</url>  
   <properties> 
@@ -25,56 +25,26 @@
       <scope>test</scope> 
     </dependency> 
   </dependencies>  
-  <build> 
-    <finalName>demo-4maven-01</finalName>
-    <pluginManagement> 
-      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->  
-      <plugins> 
-        <plugin> 
-          <artifactId>maven-clean-plugin</artifactId>  
-          <version>3.1.0</version> 
-        </plugin>  
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->  
-        <plugin> 
-          <artifactId>maven-resources-plugin</artifactId>  
-          <version>3.0.2</version> 
-        </plugin>  
-        <plugin> 
-          <artifactId>maven-compiler-plugin</artifactId>  
-          <version>3.8.0</version> 
-        </plugin>  
-        <plugin> 
-          <artifactId>maven-surefire-plugin</artifactId>  
-          <version>2.22.1</version> 
-        </plugin>  
-        <plugin> 
-          <artifactId>maven-war-plugin</artifactId>  
-          <version>3.2.2</version> 
-        </plugin>  
-        <plugin> 
-          <artifactId>maven-install-plugin</artifactId>  
-          <version>2.5.2</version> 
-        </plugin>  
-        <plugin> 
-          <artifactId>maven-deploy-plugin</artifactId>  
-          <version>2.8.2</version> 
-        </plugin> 
-      </plugins> 
-    </pluginManagement>  
-    <plugins> 
-      <plugin> 
-        <groupId>com.microsoft.azure</groupId>  
-        <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <!-- <version>1.11.0</version> -->  
+  <!--<pluginRepositories>
+    <pluginRepository> 
+      <id>commicrosoftazure-4697</id>  
+      <name>commicrosoftazure-4697</name>  
+      <url>https://oss.sonatype.org/content/repositories/commicrosoftazure-4697/</url> 
+    </pluginRepository> 
+  </pluginRepositories> -->  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.microsoft.azure</groupId>
+        <artifactId>azure-webapp-maven-plugin</artifactId>
+        <version>1.16.0-SNAPSHOT</version>
         <configuration>
           <schemaVersion>v2</schemaVersion>
           <subscriptionId>685ba005-af8d-4b04-8f16-a7bf38b2eb5a</subscriptionId>
-          <resourceGroup>qianjinshen</resourceGroup>
-          <appName>qianjinshen-wl-04</appName>
+          <resourceGroup>demo-4maven-01-1622618709219-rg</resourceGroup>
+          <appName>demo-4maven-01-1622618709219</appName>
           <pricingTier>P1v2</pricingTier>
-          <region>centralus</region>
-          <appServicePlanName>asp</appServicePlanName>
-          <appServicePlanResourceGroup>chyl115rg</appServicePlanResourceGroup>
+          <region>westeurope</region>
           <runtime>
             <os>Linux</os>
             <javaVersion>Java 8</javaVersion>
@@ -88,46 +58,10 @@
                   <include>*.war</include>
                 </includes>
               </resource>
-              <resource>
-                <type>war</type>
-                <targetDirectory>helloworld</targetDirectory>
-                <directory>${project.basedir}/target</directory>
-                <includes>
-                  <include>*.war</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>lib</type>
-                <directory>${project.basedir}/src/main/resources/deployment/lib</directory>
-                <includes>
-                  <include>*.jar</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>static</type>
-                <directory>${project.basedir}/src/main/resources/deployment/static</directory>
-                <includes>
-                  <include>*.html</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>startup</type>
-                <directory>${project.basedir}/src/main/resources/deployment/startup</directory>
-                <includes>
-                  <include>startup.sh</include>
-                </includes>
-              </resource>
-              <resource>
-                <type>zip</type>
-                <directory>${project.basedir}/src/main/resources/deployment/zip</directory>
-                <includes>
-                  <include>*.zip</include>
-                </includes>
-              </resource>
             </resources>
           </deployment>
         </configuration>
-      </plugin> 
-    </plugins> 
-  </build> 
+      </plugin>
+    </plugins>
+  </build>
 </project>
